# pheno_poser

./: Cargo.toml  README.md
src/: main.rs
test/: random.R  x.csv
