[package]
name = "vcf_pheno_pose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"
linregress = "0.5.2"
ndarray = { version = "0.15.6", features = ["blas"] }
#ndarray-glm = { version = "0.0.12", features = ["openblas-static"] }
petal-decomposition = { version = "0.6.2", features = ["openblas-static"] }
rust-htslib = "0.44.1"
