[package]
name = "pheno_poser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitset = "0.1.2"
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"
linregress = "0.5.2"
ndarray = { version = "0.15.6", features = ["blas"] }
pca = "0.1.4"
rust-htslib = "0.44.1"
